--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,7 +7,7 @@ Metrics/LineLength:
 Metrics/MethodLength:
   Max: 15
 
-Layout/AlignHash:
+Layout/HashAlignment:
   EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
 
